[package]
name = "harmonic-scheduler"
description = "Harmonic external scheduler for Agave validator"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
agave-logger = { workspace = true }
agave-scheduler-bindings = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view = { workspace = true }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
clap = { version = "4", features = ["derive"] }
harmonic-protos = { workspace = true }
indexmap = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true, features = ["ipc"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = "2"
prost-types = { workspace = true }
rdtsc = { workspace = true }
rts-alloc = { workspace = true }
rtrb = "0.3"
shaq = { workspace = true }
smallvec = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "sha2"] }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
tip-manager = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "signal"] }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls", "tls-roots", "tls-webpki-roots"] }

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
tempfile = { workspace = true }

[lints]
workspace = true
