[package]
name = "harmonic-scheduler"
description = "Harmonic external scheduler for Agave validator"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
agave-logger = { workspace = true }
agave-scheduler-bindings = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view = { workspace = true }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
clap = { version = "4", features = ["derive"] }
validator-protos = { git = "https://github.com/harmonic/validator-protos.git", tag = "v0.1.0", version = "0.1.0", features = ["client"] }
indexmap = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true, features = ["ipc"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk-ids = { workspace = true }
rustc-hash = "2"
prost = "0.14"
prost-types = "0.14"
rdtsc = { workspace = true }
rts-alloc = { workspace = true }
rtrb = "0.3"
shaq = { workspace = true }
smallvec = { workspace = true }
humantime = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "sha2"] }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
tip-manager = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = { workspace = true }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots", "tls-webpki-roots"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[target.'cfg(not(windows))'.build-dependencies]
protobuf-src = "1.1"

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
tempfile = { workspace = true }

[lints]
workspace = true
